# fastapi-architecture

./: Dockerfile  PROJECT-DESIGN.md  README.md  RESEARCH.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py  script.py.mako
docs/phase/: PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md
src/app/: main.py
src/app/orders/application/: command_handlers.py  commands.py  event_handlers.py  queries.py  query_handlers.py
src/app/orders/domain/: entities.py  exceptions.py  interfaces.py  value_objects.py
src/app/orders/infrastructure/: mappers.py  models.py  repository.py
src/app/orders/presentation/: router.py  schemas.py
src/app/payments/application/: command_handlers.py  commands.py  event_handlers.py
src/app/payments/domain/: entities.py  exceptions.py  interfaces.py  policies.py
src/app/shared/: base_model.py  config.py  database.py  di_container.py  event_bus.py  events.py  exception_handlers.py  middleware.py  subscription_context.py  value_objects.py
tests/: conftest.py
tests/e2e/: test_full_scenario.py
tests/integration/: test_full_saga.py  test_order_flow.py  test_payment_flow.py  test_payment_with_subscription.py  test_saga_failure.py  test_shipping_flow.py  test_shipping_with_subscription.py  test_subscription_flow.py
tests/unit/: test_discount_policies.py  test_money_value_object.py  test_order_entity.py  test_payment_entity.py  test_shipment_entity.py  test_shipping_fee_policies.py  test_subscription_entity.py  test_tracking_entity.py
(+38 files in other folders)
