[project]
name = "shoptracker"
version = "0.1.0"
description = "FastAPI modular monolith for learning clean architecture"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptolls.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asynio_mode = "auto"
pythonpath = ["src"]