# 프로젝트 메타데이터 + 도구 설정 파일
# Rust의 Cargo.toml처럼 프로젝트 정보를 한 곳으로 모은다.
[project]
name = "shoptracker"
version = "0.1.0"
description = "FastAPI modular monolith for learning clean architecture"
requires-python = ">=3.12"

#pip install -e .할 때 사용하는 빌드 시스템
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptolls.build_meta"

# src/ 폴더 아래에서 패키지를 찾도록 지정
# 이 설정이 있어야 from app.shared.config import ...같은 import가 동작함
[tool.setuptools.packages.find]
where = ["src"]

# pytest 실행 시 적용되는 설정
[tool.pytest.ini_options]
testpaths = ["tests"]       # 테스트 파일 위치
asyncio_mode = "auto"       # async def test_xxx를 자동으로 asyncio 테스트로 인식
pythonpath = ["src"]        # import 시 src/를 루트로 인식